--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,4 +11,11 @@
         android:layout_height="wrap_content"
         android:text="MVVM"
         tools:ignore="HardcodedText" />
+
+    <Button
+        android:id="@+id/btn_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="BtListView"
+        tools:ignore="HardcodedText" />
 </LinearLayout>
