--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,12 @@
         android:layout_height="wrap_content"
         android:text="BtListView"
         tools:ignore="HardcodedText" />
+
+    <Button
+        android:id="@+id/btn_firebase"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="BtListView"
+        tools:ignore="HardcodedText" />
+
 </LinearLayout>
